Responsive fixes for  - the logo (the header needs some fine tuning though)  - main menu  - content blocks  - footer menu
Copied breakpoints over from govcms_zen

Triggered mobile menu earlier

Modified searchbox & resize responsive behaviour

Wrapped logo & AU mark in single wrapper & made responsive

Fixed nav padding for new responsive behaviour

Fixed homepage blocks responsiveness

Show menu only as from 'large' breakpoint

Moved sidebars markup before main content
  - to get right order for smaller devices

Fixed responsiveness for inner page content

Fixed main menu mobile overlap @ 980px

Added responsive behaviour to footer menu

--- a/crimtrac_theme/css/styles.css
+++ b/crimtrac_theme/css/styles.css
@@ -48,27 +48,28 @@ body {
   color: #33afe5;
 }
 
-/* police checks */
-#block-block-1 {
-  width: 30%;
-  display: block;
-  float: left;
-  margin: 0 1.5% 0 0;
-}
-#block-block-1 p {
-  margin: 0;
-}
-
-/* cyber crime */
+#block-block-1,
 #block-block-6 {
-  width: 30%;
-  display: block;
-  float: left;
+  width: 100%;
+  background: white;
   clear: left;
-  margin: 0 1.5% 0 0;
 }
-#block-block-6 p {
-  margin: 0;
+#block-block-1 img,
+#block-block-6 img {
+  margin: auto;
+}
+@media (min-width: 720px) {
+  #block-block-1,
+  #block-block-6 {
+    width: 30%;
+    display: block;
+    float: left;
+    margin: 0 1.5% 0 0;
+  }
+  #block-block-1 p,
+  #block-block-6 p {
+    margin: 0;
+  }
 }
 
 .view-id-commissioners .views-row {
@@ -108,6 +109,26 @@ body {
 #block-menu-block-govcms-menu-block-footer {
   background: #41749e;
 }
+#block-menu-block-govcms-menu-block-footer .menu-block-govcms_menu_block-footer > ul > li {
+  width: 100%;
+  margin-bottom: 15px;
+}
+@media (min-width: 420px) {
+  #block-menu-block-govcms-menu-block-footer .menu-block-govcms_menu_block-footer > ul > li {
+    width: 50%;
+  }
+}
+@media (min-width: 720px) {
+  #block-menu-block-govcms-menu-block-footer .menu-block-govcms_menu_block-footer > ul > li {
+    width: 33%;
+  }
+}
+@media (min-width: 980px) {
+  #block-menu-block-govcms-menu-block-footer .menu-block-govcms_menu_block-footer > ul > li {
+    width: auto;
+    margin-bottom: 0;
+  }
+}
 
 #block-menu-menu-footer-sub-menu {
   background: #005f8b;
@@ -135,17 +156,51 @@ body {
   height: 192px;
 }
 
-.au-mark {
-  width: 105px;
+.header__logo {
+  max-width: 535px;
+  width: 80%;
   height: 77px;
+}
+@media (min-width: 720px) {
+  .header__logo {
+    margin-top: 67px;
+  }
+}
+.lt-ie9 .header__logo {
   margin-top: 67px;
+}
+.header__logo .au-mark {
+  width: 20%;
+  height: 100%;
   float: left;
+}
+.header__logo .au-mark > span {
   background: url("../images/au-brand.png") no-repeat;
+  background-size: contain;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.header__logo .header__logo-image {
+  width: 67%;
+  float: right;
 }
 
-.header__logo {
-  margin-left: 68px;
-  margin-top: 67px;
+@media (max-width: 979px) {
+  .header .block-govcms-text-resize {
+    position: absolute;
+    right: 215px;
+    bottom: -38px;
+    z-index: 100;
+  }
+}
+@media (max-width: 979px) {
+  .header .block-search-api-page {
+    position: absolute;
+    right: 0px;
+    bottom: -34px;
+    z-index: 100;
+  }
 }
 
 .field-name-field-info-graphic {
@@ -153,19 +208,33 @@ body {
 }
 
 #block-views-infographics-block {
-  width: 30%;
-  float: left;
-  position: relative;
-  top: -450px;
+  width: 100%;
+  background: white;
+  padding: 20px;
 }
 #block-views-infographics-block .views-row {
   border: none;
+  padding: 0;
+  margin: 0;
+}
+#block-views-infographics-block img {
+  margin: auto;
+}
+@media (min-width: 720px) {
+  #block-views-infographics-block {
+    position: relative;
+    top: -450px;
+    width: 30%;
+    float: left;
+    padding: 0;
+  }
 }
 
-#main #block-views-infographics-block {
-  margin-bottom: -450px;
+@media (min-width: 720px) {
+  #main #block-views-infographics-block {
+    margin-bottom: -450px;
+  }
 }
-
 .brick-notice {
   color: #b22222;
 }
@@ -191,11 +260,7 @@ body {
 }
 
 #block-views-job-listing-block {
-  width: 32%;
-  height: 605px;
-  float: left;
   background: #fff;
-  margin: 0 0 0 1.5%;
   padding: 20px;
 }
 #block-views-job-listing-block h2 {
@@ -244,15 +309,19 @@ body {
 #block-views-job-listing-block .field-name-field-classification {
   margin-bottom: 0;
 }
+@media (min-width: 720px) {
+  #block-views-job-listing-block {
+    width: 32%;
+    height: 605px;
+    float: left;
+    margin: 0 0 0 1.5%;
+  }
+}
 
 #block-block-11 {
-  width: 67%;
-  min-height: 138px;
-  float: left;
   background: #135286;
   color: #fff;
   padding: 20px;
-  margin: 0 0 0 1.5%;
   position: relative;
   font-size: 1.6rem;
   line-height: 1.5;
@@ -268,12 +337,47 @@ body {
   right: 20px;
   font-size: 1rem;
 }
+@media (min-width: 720px) {
+  #block-block-11 {
+    width: 67%;
+    min-height: 138px;
+    float: left;
+    margin: 0 0 0 1.5%;
+  }
+}
 
 .region-navigation {
   background: #135286;
   display: block;
   height: 40px;
   margin-bottom: 30px;
+  padding: 7px;
+}
+@media (min-width: 980px) {
+  .region-navigation {
+    padding: 0;
+  }
+}
+.region-navigation .block__content > .menu {
+  display: none;
+}
+@media (min-width: 980px) {
+  .region-navigation .block__content > .menu {
+    display: block;
+  }
+}
+.lt-ie9 .region-navigation .block__content > .menu {
+  display: block;
+}
+@media (min-width: 720px) {
+  .region-navigation .block__content > .tinynav {
+    display: block;
+  }
+}
+@media (min-width: 980px) {
+  .region-navigation .block__content > .tinynav {
+    display: none;
+  }
 }
 
 #block-superfish-1 {
@@ -314,6 +418,9 @@ body {
   background: #135286;
 }
 
+#block-menu-block-govcms-menu-block-sidebar {
+  display: none;
+}
 #block-menu-block-govcms-menu-block-sidebar .menu__item {
   background: #135286;
 }
@@ -339,13 +446,14 @@ body {
   color: #135286;
   background: none;
 }
+@media (min-width: 980px) {
+  #block-menu-block-govcms-menu-block-sidebar {
+    display: block;
+  }
+}
 
 #block-views-latest-news-block-1 {
-  width: 32%;
-  height: 605px;
-  float: left;
   background: #fff;
-  margin: 0 1.5%;
   padding: 20px;
 }
 #block-views-latest-news-block-1 h2 {
@@ -383,6 +491,14 @@ body {
   padding: 4px 5px;
   text-decoration: none;
 }
+@media (min-width: 720px) {
+  #block-views-latest-news-block-1 {
+    width: 32%;
+    height: 605px;
+    float: left;
+    margin: 0 1.5%;
+  }
+}
 
 body {
   background: #bcbec0 url("../images/page-background.jpg") no-repeat top center;
@@ -406,16 +522,20 @@ body.large-fonts #page {
 }
 
 .internal-page #content {
-  width: 67%;
-  margin: 0 0 0 1.5%;
-  float: right;
   background: #fff;
   padding: 20px;
 }
-.internal-page .sidebars {
-  width: 30%;
-  margin: 0 1.5% 0 0;
-  float: right;
+@media (min-width: 720px) {
+  .internal-page #content {
+    width: 67%;
+    margin: 0 0 0 1.5%;
+    float: left;
+  }
+  .internal-page .sidebars {
+    width: 30%;
+    margin: 0 1.5% 0 0;
+    float: left;
+  }
 }
 
 h1.page__title {
