--- a/crimtrac_theme/sass/components/_jobs_home.scss
+++ b/crimtrac_theme/sass/components/_jobs_home.scss
@@ -1,9 +1,5 @@
 #block-views-job-listing-block {
-  width: 32%;
-  height: 605px;
-  float: left;
   background: #fff;
-  margin: 0 0 0 1.5%;
   padding: 20px;
   h2 {
     font-size: 2.5rem;
@@ -52,5 +48,12 @@
   }
   .field-name-field-classification {
     margin-bottom: 0;
+  }
+
+  @include breakpoint($medium) {
+    width: 32%;
+    height: 605px;
+    float: left;
+    margin: 0 0 0 1.5%;
   }
 }
