--- a/crimtrac_theme/sass/components/_mission_statement.scss
+++ b/crimtrac_theme/sass/components/_mission_statement.scss
@@ -1,11 +1,7 @@
 #block-block-11 {
-  width: 67%;
-  min-height: 138px;
-  float: left;
   background: $primary-color;
   color: #fff;
   padding: 20px;
-  margin: 0 0 0 1.5%;
   position: relative;
   font-size: 1.6rem;
   line-height: 1.5;
@@ -19,5 +15,12 @@
     bottom: 20px;
     right: 20px;
     font-size: 1rem;
+  }
+
+  @include breakpoint($medium) {
+    width: 67%;
+    min-height: 138px;
+    float: left;
+    margin: 0 0 0 1.5%;
   }
 }
